--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   lottie: ^1.1.0
   carousel_slider: ^4.2.1
   logger:
+  intl: ^0.17.0
 dev_dependencies:
   logger:
   flutter_test:
