--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   permission_handler: ^11.0.1
   lottie: ^1.1.0
   carousel_slider: ^4.2.1
+  pretty_dio_logger:
   logger:
   intl: ^0.18.1
 dev_dependencies:
