ajuste nas imagens

--- a/micro_app_account/pubspec.yaml
+++ b/micro_app_account/pubspec.yaml
@@ -30,8 +30,9 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
-flutter:
-
+#flutter:
+#    assets:
+#      - packages/micro_app_design_system/lib/src/assets/
   # To add assets to your package, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
